--- a/docs/_posts/2019-10-09-oura-part-1.markdown
+++ b/docs/_posts/2019-10-09-oura-part-1.markdown
@@ -10,7 +10,7 @@ post
 
 The goal of this app is a minimalist design and to streamline user login through the web interface. The Python 3 app is powered by the Flask framework for the back-end and React on the front-end. 
 
-The Oura API uses the OAuth2 protocol for authentication, and requires a user to first log in to Oura to authorize the app to access the account's data (see: [Oura docs](https://cloud.ouraring.com/docs/)). There are a number of ways to do this such as with a [3rd party oura Python library](https://python-ouraring.readthedocs.io/en/latest/auth.html), the [requests Python library](https://sararobinson.dev/2019/05/24/analyzing-sleep-quality-oura-bigquery.html), [Postman](https://medium.com/@lserafin/exploring-the-oura-cloud-api-with-postman-4d1c4abcd888), and through the command line with [curl](https://blog.adafruit.com/2017/10/02/using-curl-to-collect-oura-ring-sleep-activity-and-readiness-data/). 
+The Oura API uses the OAuth2 protocol for authentication, and requires a user to first log in to Oura to authorize the app to access the account's data (see: [Oura docs](https://cloud.ouraring.com/docs/)). There are a number of guides on how to do this such as with a [3rd party oura Python library](https://python-ouraring.readthedocs.io/en/latest/auth.html), the [requests Python library and BigQuery](https://sararobinson.dev/2019/05/24/analyzing-sleep-quality-oura-bigquery.html), [Postman](https://medium.com/@lserafin/exploring-the-oura-cloud-api-with-postman-4d1c4abcd888), and through the command line with [curl](https://blog.adafruit.com/2017/10/02/using-curl-to-collect-oura-ring-sleep-activity-and-readiness-data/). 
 
 ####1. Create an application in your Oura Cloud portal
 Log in to your Oura Cloud account and create a "New Application" in the [Applications Section](https://cloud.ouraring.com/oauth/applications). Complete the indicated fields, and set "Redirect URIs" to `http://0.0.0.0:3030/callback` (which you'll set up in the next step). The server-side authorization urls for your application appears on the bottom of the page and looks like:
