--- a/_posts/2019-10-10-oura-part-2.markdown
+++ b/_posts/2019-10-10-oura-part-2.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Part 2: Warehouse and plot sleep data"
+title:  "Explore the Oura API using Flask (Part 2)"
 date:   2019-10-11 12:23:38 -0600
 categories: jekyll update
 ---
