Modify copy of part 3.

--- a/_posts/2020-01-01-oura-part-3.markdown
+++ b/_posts/2020-01-01-oura-part-3.markdown
@@ -423,4 +423,4 @@ Congratulations, you now have a CI/CD pipeline that you can implement for this a
 
 In the following walkthrough we'll create a Rails app to interact with data from Oura Cloud. 
 
-To familiarize yourself with how to interact with the Oura API, you can read the [minimalist overview on connecting to the Oura Cloud API using Flask](https://mindatasleep.github.io/oura/jekyll/update/2019/10/09/oura-part-1/) that I wrote a while back. For another perspective, here's [great and witty guide by Ismail Elouafiq.](https://medium.com/@nidhog/get-sleep-data-from-the-oura-ring-using-python-98eb0d6ae00a) Certainly check out his other writings on human performance experiments and data science. His voice is a treat to read.
+To familiarize yourself with the Oura API, you can read the [minimalist overview on connecting to the Oura Cloud API using Flask](https://mindatasleep.github.io/oura/jekyll/update/2019/10/09/oura-part-1/) that I wrote a while back. For another perspective, here's [great guide written with the witty eloquence of Ismail Elouafiq.](https://medium.com/@nidhog/get-sleep-data-from-the-oura-ring-using-python-98eb0d6ae00a) Certainly check out his other writings on human performance experiments and data science. His voice is a treat to read.
